# exc

./: .gitignore  LICENSE  MANIFEST.in  README.md  exc-analyzer_1.3.0-1_all.deb  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  pypi-publish.yml  release.yml
debian/: changelog  control  copyright  exc-analyzer.desktop  install  rules  watch
exc-analyzer/: .gitignore  pyproject.toml  requirements.txt  setup.py
exc-analyzer/.github/workflows/: publish.yml
exc-analyzer/exc/: LICENSE  README.md  pyproject.toml  requirements.txt
exc-analyzer/exc/exc_analyzer.egg-info/: PKG-INFO
exc-analyzer/exc_analyzer.egg-info/: PKG-INFO
exc_analyzer/: .gitignore  __main__.py  api.py  async_api.py  cli.py  config.py  constants.py  graphql_client.py  helpers.py  i18n.py  logging_utils.py  main.py  preferences.py  print_utils.py  spinner.py  utils.py
exc_analyzer/commands/: actions_audit.py  advanced_secrets.py  analysis.py  commit_anomaly.py  content_audit.py  contrib_impact.py  dork_presets.py  dork_scan.py  file_history.py  login.py  logout.py  scan_secrets.py  security_score.py  user_a.py  user_anomaly.py
exc_analyzer/locale/en/: messages.json
exc_analyzer/locale/tr/: messages.json
scripts/: build_wsl.sh  exc-gui-launcher
tests/: benchmark_rate_limit.py  conftest.py  test_analysis.py  test_api_rate_limit.py  test_async_api.py  test_cli.py  test_file_history.py  test_i18n.py  test_i18n_keys.py  test_security_hardening.py  test_security_score.py  test_user_help.py  test_utils.py
