[project]
name = "exc-analyzer"
version = "1.1.9"
description = "Powerful Python tool for in-depth GitHub analysis, designed for multiple platforms and still in development."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
    { name = "EXC", email = "exc-analyzer@outlook.com" },
    { name = "brgkdm", email = "brgkdm@proton.me" }
]

dependencies = [
    "requests",
    "toml",
    "packaging",
    "colorama",
    "tabulate",
    "importlib_resources"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Security",
    "Topic :: Cybersecurity"
]

keywords = ["github", "security", "audit", "scanner", "developer-tools", "exc-analyzer"]

[urls]
Homepage = "https://exc-analyzer.web.app/"
Repository = "https://github.com/exc-analyzer/exc"

[project.scripts]
exc = "exc_analyzer.main:main"

[tool.setuptools.package-data]
"exc_analyzer" = ["exc-analyzer.png"]
